themes/booster/static/css/main.css
/* ... */
footer a {
  color: var(--header-text-color);
}

/* Front page */
.front-image {
  position: relative;
  width: 100%;
}
.front-image img {
  width: 100%;
}

/* Article styles */

article {
  padding: 3rem 0;
}
article h1,
article h2,
article h3,
article h4,
article h5 {
  font-family: var(--condensed-font);
  text-transform: uppercase;
  letter-spacing: var(--letter-spacing-condensed);
  margin-bottom: 0.5rem;
}

article > * {
  max-width: 600px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2rem;
}

/* This is done to make map have a relative height based on the width. This is done to make it responsive */

.header-join h1 {
  text-align: center;
  padding: 40px;
  max-width: 800px;
  margin: 0 auto;
}

article .map {
  position: relative;
  max-width: 900px;
  padding-bottom: 40%;
}
article .map iframe {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
}
/* Organizers styling */
#organizers {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  align-items: flex-start;
  padding: 0;
  list-style: none;
}

#organizers .organizer {
  flex-basis: 33%;
  margin-bottom: 1rem;
}
#organizers .organizer img {
  max-width: 200px;
}
#organizers .organizer .name {
  display: block;
  font-weight: 400;
}
#organizers .organizer .twitter-handle {
  display: block;
  font-weight: 400;
}
/* Front styling */
.rocket,
.header-join {
  height: 80%;
  position: relative;
  background-color: var(--header-color);
  background-size: 100% auto;
  background-repeat: no-repeat;
  background-position: center 100px;
  overflow: hidden;
  color: var(--header-text-color);
  font-family: var(--header-font);
  letter-spacing: var(--letter-spacing-header);
}
.rocket .middle-of-image {
  width: 70%;
  max-width: 900px;

  margin: auto;
  margin-bottom: 40px;
}
.rocket .middle-of-image h1 {
  text-align: center;
}
.rocket .middle-of-image .dates-slogan {
  margin-top: 50px;
}
.rocket .middle-of-image .dates-location .font-page-conference-dates {
  font-size: var(--font-size-h1);
}
.rocket .middle-of-image .dates-location .front-page-slogan {
  font-size: var(--font-size-h2);
  font-weight: var(--font-weight);
}
.rocket .middle-of-image .dates-location span {
  display: block;
  text-align: center;
}
.rocket .middle-of-image .dates-location {
  margin-top: 50px;
}

.call-to-action-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: absolute;
    top: 3rem;
    width: 100%;
    padding: 25px;
}

.call-to-action-group {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 2rem;
}

.call-to-action {
    align-self: center;
    text-align: center;
    position: relative;

    background-color: var(--color-hav);
    border: 4px solid var(--header-text-color);
    border-radius: 2px;
}

.call-to-action__link {
    display: block;
    width: 100%;
    height: 100%;
    padding: 0.5rem 1rem;

    font-family: var(--header-font);
    font-size: var(--font-size-h1);
    font-weight: var(--font-weight);
    letter-spacing: var(--letter-spacing-header);
    line-height: var(--line-height);
    text-decoration: none;
    color: var(--header-text-color);
}

.call-to-action__link:hover, .call-to-action:hover {
  background-color: var(--color-rust);
}

.imagetron-2 {
  display: flex;
  flex-direction: column;
  padding: 80px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  text-align: center;
}

.image-n-contents {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-flow: dense;
}

.image-n-contents__content {
  align-self: center;
  padding: 40px;
}

.image-n-contents__content:nth-of-type(2n) {
  grid-column: 2;
}

.image-n-contents__image:nth-of-type(2n) {
  grid-column: 1;
}

@media (max-width: 720px) {
  #wide-menu {
    display: none;
  }
  #thin-menu {
    display: flex;
  }
  #main-nav {
    flex-direction: row;
    padding: 20px;
  }
  #booster-logo {
    flex: 1;
  }
  #booster-logo img {
    max-height: 93px;
  }
  .main-menu .nav-item {
    width: 100%;
  }
  .main-menu {
    flex-direction: column;
    background: var(--header-color);
    justify-content: flex-start;
    padding: 1rem;
    height: 100%;
  }
  #booster-logo svg {
    width: 130px;
  }
  .imagetron-2 {
    padding: 30px;
  }
  .image-n-contents {
    display: block;
  }
  .image-n-contents__content {
    padding: 30px;
  }

  #sponsor-area {
    padding: 1rem;
  }

  #sponsor-area .sponsorlogos li {
    flex-basis: 50%;
    max-width: 100px;
    padding: 0px;
  }

  article {
    padding: 0.8rem;
  }

  .front-image {
    height: 500px;
    overflow: hidden;
  }
  .front-image img {
    object-fit: cover;
    width: 750px;
  }

  .header-join h1 {
    padding: 20px;
  }

  .speakers-body .speaker {
    flex-direction: column;
  }

  .speakers-body .speaker .left,
  .speakers-body .speaker .right {
    width: 100%;
  }

  .program .period:has(.room + .room):after {
    position: absolute;
    content: "";
    top: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to left, rgba(0, 0, 0, 0.1), transparent 30%);
    width: 10px;
  }

  button.toggler {
    display: none;
  }
}

.program {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  color: var(--color-blurple);
  max-width: 1100px;
}

.program .period {
  max-width: 600px;
  width: 100%;
  position: relative;
}

.program .period:has(.room + .room) {
  max-width: 1100px;
}

.program .break {
  display: grid;
  width: 100%;
  max-width: 800px;
  grid-template-columns: 1fr auto 1fr;
  grid-template-rows: auto;
  align-items: center;
  justify-items: center;
}

.program .break a {
  display: flex;
  align-items: center;
  flex-direction: column;
  background: var(--color-varmkvit);
  border: 2px solid var(--color-mose);
  color: var(--color-blurple);
  padding: 13px 13px;
  text-decoration: none;
  margin: 0 20px;
}
/* ... */

